[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["msk_cdm*"]

[project]
name = "msk_cdm"
version = "0.1.4"
requires-python = ">=3.9, <4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "minio>=7.1, <8",
    "pydantic>=2.3, <3",
	"boto3>=1.34.150",
    "python-dotenv>=1.0, <2",
    "pyarrow>=14.0.2",
    "databricks-connect==14.3.2",
    "databricks-sql-connector==3.1.2",
    "databricks-sdk==0.28.0",
    "certifi==2024.2.2",
    "pandas>=2.1.4",
	"scikit-learn>=1.5.1",
    "mkdocstrings>=0.21.2",
	"mkdocs>=1.6.0",
	"mkdocs-material>=9.1.7",
    "sqlalchemy>=2.0.32",
    "ibm_db==3.2.3"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test =["pyfakefs", "pytest", "tox"]
# 7.2.5 currently broken https://github.com/sphinx-doc/sphinx/issues/11662
docs = ["sphinx==7.2.4"]

[tool.setuptools_scm]
root = "."
